# vcite

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-CODE  LICENSE-SPEC  README.md  SPEC.md
examples/: academic-l3.json  ai-output-l1.txt  build_katina.py  build_katina_real.py  build_katina_v2.py  citation-article.tex  citation.md  citation.tex  embedding.html  journalism-l2.json  katina-article.html  katina-articlevcite.html  katina-citations.json
implementations/javascript/: README.md  package.json
implementations/javascript/src/: hash.mjs  models.mjs  verify.mjs
implementations/javascript/tests/: hash.test.mjs  models.test.mjs  verify.test.mjs
implementations/python/: README.md  pyproject.toml
implementations/python/tests/: test_hash.py  test_models.py
implementations/python/vcite/: __init__.py  hash.py  models.py
schema/: context.jsonld  vcite.schema.json
test-suite/: README.md  vectors.yaml
tools/: archive.py  enhance.py  enrich.py  fragment_url.py  hashdb.py  metadata.py  renderer.py  source_fetch.py  verify.py
tools/parsers/: html_parser.py  latex_parser.py  md_parser.py
tools/strain/: DESIGN.md  analyze.py  calibration.py  scorer.py  sheaf.py
tools/templates/: panel.html  vcite.css  vcite.js
tools/tests/: test_archive.py  test_enrich.py  test_fragment_url.py  test_hashdb.py  test_html_parser.py  test_latex_parser.py  test_renderer_enrichment.py  test_verify.py
